--- a/typeseam/templates/forms/sanfrancisco.html
+++ b/typeseam/templates/forms/sanfrancisco.html
@@ -1,20 +1,22 @@
-<form action="/sanfrancisco/" method="POST" accept-charset="utf-8">
+<form class="sanfrancisco" action="/sanfrancisco/" method="POST" accept-charset="utf-8">
 
-	
   {% include "includes/csrf_field.html" %}
-
-	<div class="field">	    
-		<legend>
+	<div class="field field-checkbox_options">	    
+	<legend>
 	    How would you like us to contact you?
     </legend>
-			<span class="field-help_text">
-				Code for America will use this to update you about your application.
-			</span>
+	<span class="field-help_text">
+		Code for America will use this to update you about your application.
+	</span>
 		
-		 <ul class="usa-unstyled-list">
+	<ul class="checkbox_options options_list">
       <li>
-        <input id="email" type="checkbox" name="email" value="email">
-        <label for="email">Email</label>
+      	<label class="field-option_label">
+	        <input type="checkbox" name="email" value="email">
+	        <span class="option-display_text">
+		        Email
+	        </span>
+      	</label>
       </li>
       <li>
         <input id="sms" type="checkbox" name="sms" value="sms">
@@ -44,8 +46,8 @@
 		<label class="field-wrapping_label">
 			<span class="field-display_text">
 				What is your middle name?
+				<span class="field-optional">(optional)</span>
 			</span>
-			<span class="field-optional">(optional)</span>
 			<input type="text" name="middle_name" value="">
 		</label>
 	</div>
@@ -59,35 +61,73 @@
 		</label>
 	</div>
 
+	<div class="field phone_number">
+		<label class="field-wrapping_label">
+			<span class="field-display_text">
+				What is your phone number?
+				<span class="field-optional">(optional)</span>
+			</span>
+			<span class="field-help_text">
+				Code for America and the public defender will use this to contact you about your application.
+			</span>
+			<input type="text" name="phone_number" value="">
+		</label>
+	</div>
+
 	<div class="field">
+		<label class="field-wrapping_label">
+			<span class="field-display_text">
+				What is your email?
+				<span class="field-optional">(optional)</span>
+			</span>
+			<span class="field-help_text">
+				For example "yourname@example.com"
+			</span>
+			<input type="text" name="email" value="">
+		</label>
+	</div>
+
+	<div class="field dob">
 		<fieldset>
 
 	    <legend>
 		    What is your date of birth?
 	    </legend>
 
-	    <span class="field-help_text usa-datefield-hint" id="dob_hint">
+	    <span class="field-help_text">
 		    For example: 4/28/1986
 	    </span>
 
-	    <div class="field-dob">
-	      <div class="usa-datefield usa-form-group usa-form-group-month">
-	        <label for="dob_mo">Month</label>
-	        <input aria-describedby="dob_hint" id="dob_mo" name="dob_mo" pattern="0?[1-9]|1[012]" type="number" min="1" max="12" value="">
+	    <div class="subfield-row">
+	      <div class="subfield dob_month">
+					<label class="field-wrapping_label">
+						<span class="field-display_text">
+							Month
+						</span>
+		        <input name="dob_month" pattern="0?[1-9]|1[012]" type="number" min="1" max="12">
+					</label>
 	      </div>
-	      <div class="usa-datefield usa-form-group usa-form-group-day">
-	        <label for="dob_day">Day</label>
-	        <input aria-describedby="dob_hint" id="dob_day" name="dob_day" pattern="0?[1-9]|1[0-9]|2[0-9]|3[01]" type="number" min="1" max="31" value="">
+	      <div class="subfield dob_day">
+					<label class="field-wrapping_label">
+						<span class="field-display_text">
+							Day
+						</span>
+		        <input name="dob_day" pattern="0?[1-9]|1[0-9]|2[0-9]|3[01]" type="number" min="1" max="31">
+					</label>
 	      </div>
-	      <div class="usa-datefield usa-form-group usa-form-group-year">
-	        <label for="dob_yr">Year</label>
-	        <input aria-describedby="dob_hint" id="dob_yr" name="dob_yr" pattern="[0-9]{4}" type="number" min="1900" max="2016" value="">
+	      <div class="subfield dob_year">
+					<label class="field-wrapping_label">
+						<span class="field-display_text">
+							Year
+						</span>
+		        <input name="dob_year" pattern="[0-9]{4}" type="number" min="1900" max="2016">
+					</label>
 	      </div>
 	    </div>
 	  </fieldset>
 	</div>
 
-	<div class="field">
+	<div class="field ssn">
 		<label class="field-wrapping_label">
 			<span class="field-display_text">
 				What is your Social Security Number?
@@ -95,12 +135,12 @@
 			<span class="field-help_text">
 				The public defender's office will use this to get your San Francisco RAP sheet and find any convictions that can be reduced or dismissed.
 			</span>
-			<input type="text" name="last_name" value="">
+			<input type="text" name="ssn" value="">
 		</label>
 	</div>
 
 
-	<div class="field">
+	<div class="field drivers_license_number">
 		<label class="field-wrapping_label">
 			<span class="field-display_text">
 				What is your Driver's License or ID Number?
@@ -108,41 +148,43 @@
 			<span class="field-help_text">
 				The public defender's office will use this to get your San Francisco RAP sheet and find any convictions that can be reduced or dismissed.
 			</span>
-			<input type="text" name="last_name" value="">
+			<input type="text" name="drivers_license_number" value="">
 		</label>
 	</div>
 
-	<div class="field">	    
-		<legend>
+	<div class="field field-radio_options">	    
+	<legend>
 	    Are you a U.S. citizen?
     </legend>
-			<span class="field-help_text">
-				The public defender handles non-citizen cases differently and has staff who can help with citizenship issues.
-			</span>
+	<span class="field-help_text">
+		The public defender handles non-citizen cases differently and has staff who can help with citizenship issues.
+	</span>
 		
-		 <ul class="usa-unstyled-list">
+	 <ul class="radio_options options_list">
       <li>
-        <input id="yes" type="radio" name="us_citizen" value="yes">
-        <label for="yes">Yes</label>
+	      <label class="field-option_label">
+	        <input type="radio" name="us_citizen" value="yes">
+	        Yes
+        </label>
       </li>
       <li>
-        <input id="no" type="radio" name="us_citizen" value="no">
-        <label for="no">No</label>
+	      <label class="field-option_label">
+	        <input type="radio" name="us_citizen" value="no">
+	        No
+        </label>
       </li>
     </ul>
 	</div>
 
 
-	<div class="field">
+	<div class="field address">
 		<fieldset>
-
 	    <legend>
 		    What is your mailing address?
 	    </legend>
 			<span class="field-help_text">
 				The public defender will need to send you important papers.
 			</span>
-
 	    <div class="subfield">
 				<label class="field-wrapping_label">
 					<span class="field-display_text">
@@ -155,73 +197,55 @@
 				</label>
 	    </div>
 
-	    <div class="subfield">
-				<label class="field-wrapping_label">
-					<span class="field-display_text">
-						City
-					</span>
-					<input type="text" name="address_city" value="">
-				</label>
-	    </div>
+			<div class="subfield-row">
+		    <div class="subfield address_city">
+					<label class="field-wrapping_label">
+						<span class="field-display_text">
+							City
+						</span>
+						<input type="text" name="address_city" value="">
+					</label>
+		    </div>
 
-	    <div class="subfield">
-				<label class="field-wrapping_label">
-					<span class="field-display_text">
-						State
-					</span>
-					<input type="text" name="address_state" value="CA">
-				</label>
-	    </div>
+		    <div class="subfield address_state">
+					<label class="field-wrapping_label">
+						<span class="field-display_text">
+							State
+						</span>
+						<input type="text" name="address_state" value="CA">
+					</label>
+		    </div>
 
-	    <div class="subfield">
-				<label class="field-wrapping_label">
-					<span class="field-display_text">
-						Zip code
-					</span>
-					<input type="text" name="address_zip" value="">
-				</label>
-	    </div>
+		    <div class="subfield address_zip">
+					<label class="field-wrapping_label">
+						<span class="field-display_text">
+							Zip code
+						</span>
+						<input type="text" name="address_zip" value="">
+					</label>
+		    </div>
+			</div> <!-- end row -->
 
 	  </fieldset>
 	</div>
-
-	<div class="field">
-		<label class="field-wrapping_label">
-			<span class="field-display_text">
-				What is your phone number?
-			</span>
-			<span class="field-optional">(optional)</span>
-			<span class="field-help_text">
-				Code for America and the public defender will use this to contact you about your application.
-			</span>
-			<input type="text" name="phone_number" value="">
-		</label>
-	</div>
-
-	<div class="field">
-		<label class="field-wrapping_label">
-			<span class="field-display_text">
-				What is your email?
-			</span>
-			<span class="field-optional">(optional)</span>
-			<input type="text" name="email" value="">
-		</label>
-	</div>
-
 
 	<div class="field">	    
 		<legend>
 	    Are you on probation or parole?
     </legend>
-		
-		 <ul class="usa-unstyled-list">
+			
+	  <ul class="radio_options options_list">
       <li>
-        <input id="yes" type="radio" name="us_citizen" value="yes">
-        <label for="yes">Yes</label>
+	      <label class="field-option_label">
+	        <input type="radio" name="us_citizen" value="yes">
+	        Yes
+        </label>
       </li>
       <li>
-        <input id="no" type="radio" name="us_citizen" value="no">
-        <label for="no">No</label>
+	      <label class="field-option_label">
+	        <input type="radio" name="us_citizen" value="no">
+	        No
+        </label>
       </li>
     </ul>
 	</div>
@@ -250,14 +274,18 @@
 		<legend>
 	    Are you currently serving a sentence?
     </legend>
-		 <ul class="usa-unstyled-list">
+		 <ul class="radio_options options_list">
       <li>
-        <input id="yes" type="radio" name="serving_sentence" value="yes">
-        <label for="yes">Yes</label>
+	      <label class="field-option_label">
+	        <input type="radio" name="serving_sentence" value="yes">
+	        Yes
+        </label>
       </li>
       <li>
-        <input id="no" type="radio" name="serving_sentence" value="no">
-        <label for="no">No</label>
+	      <label class="field-option_label">
+	        <input type="radio" name="serving_sentence" value="no">
+	        No
+        </label>
       </li>
     </ul>
 	</div>
@@ -266,14 +294,18 @@
 		<legend>
 	    Are you currently being charged with a crime?
     </legend>
-		 <ul class="usa-unstyled-list">
+		 <ul class="radio_options options_list">
       <li>
-        <input id="yes" type="radio" name="being_charged" value="yes">
-        <label for="yes">Yes</label>
+	      <label class="field-option_label">
+	        <input type="radio" name="being_charged" value="yes">
+	        Yes
+        </label>
       </li>
       <li>
-        <input id="no" type="radio" name="being_charged" value="no">
-        <label for="no">No</label>
+	      <label class="field-option_label">
+	        <input type="radio" name="being_charged" value="no">
+	        No
+        </label>
       </li>
     </ul>
 	</div>
@@ -282,14 +314,18 @@
 		<legend>
 	    Have you ever been arrested or convicted outside of San Francisco?
     </legend>
-		 <ul class="usa-unstyled-list">
+		 <ul class="radio_options options_list">
       <li>
-        <input id="yes" type="radio" name="rap_outside_sf" value="yes">
-        <label for="yes">Yes</label>
+	      <label class="field-option_label">
+	        <input type="radio" name="rap_outside_sf" value="yes">
+	        Yes
+        </label>
       </li>
       <li>
-        <input id="no" type="radio" name="rap_outside_sf" value="no">
-        <label for="no">No</label>
+	      <label class="field-option_label">
+	        <input type="radio" name="rap_outside_sf" value="no">
+	        No
+        </label>
       </li>
     </ul>
 	</div>
@@ -311,14 +347,18 @@
 			<span class="field-help_text">
 				The Clean Slate program is free for you, but the public defender uses this information to get money from government programs.
 			</span>
-		 <ul class="usa-unstyled-list">
+		 <ul class="radio_options options_list">
       <li>
-        <input id="yes" type="radio" name="currently_employed" value="yes">
-        <label for="yes">Yes</label>
+	      <label class="field-option_label">
+	        <input type="radio" name="currently_employed" value="yes">
+	        Yes
+        </label>
       </li>
       <li>
-        <input id="no" type="radio" name="currently_employed" value="no">
-        <label for="no">No</label>
+	      <label class="field-option_label">
+	        <input type="radio" name="currently_employed" value="no">
+	        No
+        </label>
       </li>
     </ul>
 	</div>
@@ -351,11 +391,11 @@
 		<label class="field-wrapping_label">
 			<span class="field-display_text">
 				How did you hear about this program or website?
+				<span class="field-optional">(optional)</span>
 			</span>
-			<span class="field-optional">(optional)</span>
 			<input type="text" name="how_did_you_hear" value="">
 		</label>
 	</div>
 
-	<button type="submit">Send the application</button>
+	<button type="submit">Submit</button>
 </form>
