--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<section class="above_the_fold">
+<section class="splash above_the_fold">
   <div class="container">
 
   {% include "includes/splash_header.html" %}
