--- a/typeseam/templates/privacy_policy.html
+++ b/typeseam/templates/privacy_policy.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-<section class="privacy_above_the_fold">
+<section class="privacy above_the_fold">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-8 col-md-6 col_centered">
@@ -14,7 +14,7 @@
   </div>
 </section>
 
-<section class="privacy_description">
+<section class="privacy content">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-8 col-md-6  col_centered">
