add consent language to submit button, ingore comps folder

--- a/frontend/less/forms.less
+++ b/frontend/less/forms.less
@@ -13,6 +13,13 @@ section.content.application_form {
 	color: #666;
 	font-weight: 400; }
 
+.note {
+	p {
+		font-size: 1em;
+		font-weight: 400;
+	}
+	ol { padding-left: 1.5em; }
+}
 .field {
 	input {
 		font-weight: 400; }
@@ -31,6 +38,7 @@ section.content.application_form {
 	ul { padding: 0; }
 }
 .field + .field { margin-top: 1.5em; }
+.field + .note { margin-top: 1.5em; }
 span + .subfield { margin-top: .5em; }
 .options_list {
 	margin: .25em -.25em;
