--- a/typeseam/templates/forms/sanfrancisco.html
+++ b/typeseam/templates/forms/sanfrancisco.html
@@ -396,6 +396,15 @@
 			<input type="text" name="how_did_you_hear" value="">
 		</label>
 	</div>
+	<div class="note">
+		<p>
+			By clicking “Submit”,  you are:
+		</p>
+		<ol>
+			<li>Giving the San Francisco Public Defender's office permission to get your San Francisco RAP Sheet.</li>
+			<li>Acknowledging that filling out this form is not a guarantee that a public defender will represent you.</li>
+		</ol>
+	</div>
 
 	<button type="submit">Submit</button>
 </form>
