save form submissions

--- a/typeseam/templates/forms/sanfrancisco.html
+++ b/typeseam/templates/forms/sanfrancisco.html
@@ -12,23 +12,35 @@
 	<ul class="checkbox_options options_list">
       <li>
       	<label class="field-option_label">
-	        <input type="checkbox" name="email" value="email">
+	        <input type="checkbox" name="prefers_email" value="yes">
 	        <span class="option-display_text">
 		        Email
 	        </span>
       	</label>
       </li>
       <li>
-        <input id="sms" type="checkbox" name="sms" value="sms">
-        <label for="sms">Text message</label>
+      	<label class="field-option_label">
+	        <input type="checkbox" name="prefers_sms" value="yes">
+	        <span class="option-display_text">
+		        Text message
+	        </span>
+      	</label>
       </li>
       <li>
-        <input id="voicemail" type="checkbox" name="voicemail" value="voicemail">
-        <label for="voicemail">Voicemail</label>
+      	<label class="field-option_label">
+	        <input type="checkbox" name="prefers_voicemail" value="yes">
+	        <span class="option-display_text">
+		        Voicemail
+	        </span>
+      	</label>
       </li>
       <li>
-        <input id="snailmail" type="checkbox" name="snailmail" value="snailmail">
-        <label for="snailmail">Paper mail</label>
+      	<label class="field-option_label">
+	        <input type="checkbox" name="prefers_snailmail" value="yes">
+	        <span class="option-display_text">
+		        Paper mail
+	        </span>
+      	</label>
       </li>
     </ul>
 	</div>
