--- a/frontend/less/variables.less
+++ b/frontend/less/variables.less
@@ -158,7 +158,7 @@
 @btn-default-bg:                 #fff;
 @btn-default-border:             #ccc;
 
-@btn-primary-color:              @action-text;
+@btn-primary-color:              #004A6C;
 @btn-primary-bg:                 @action-background;
 @btn-primary-border:             darken(@btn-primary-bg, 15%);
 
