Added "Learn more" button. Adjusted spacing

--- a/frontend/less/variables.less
+++ b/frontend/less/variables.less
@@ -154,8 +154,8 @@
 
 @btn-font-weight:                normal;
 
-@btn-default-color:              #333;
-@btn-default-bg:                 #fff;
+@btn-default-color:              #004A6C;
+@btn-default-bg:                 #E5E5E5;
 @btn-default-border:             #ccc;
 
 @btn-primary-color:              #004A6C;
