--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -26,6 +26,14 @@ p.step_headline{
   font-weight: 600;
 }
 
+.call_to_action_time{
+  margin-bottom: 26px;
+}
+
+.main_headline{
+  margin-top:70px;
+}
+
 .call_to_action_button {
   width: 100%;
   max-width: 20em;
@@ -33,8 +41,13 @@ p.step_headline{
   font-weight: 700;
 }
 
+#learn-more-button{
+  padding-right:0;
+}
+
 .credibility_note {
-  padding-top: 70px;
+  padding-top: 100px;
+  padding-bottom: 20px;
 }
 .credibility_note a {
   color: @brand-note;
@@ -117,7 +130,7 @@ p.step_headline{
 }
 
 .splash.above_the_fold .btn {
-  margin-bottom:40px;
+  margin-bottom:20px;
 }
 
 .journey_headline{
@@ -204,6 +217,10 @@ section.footer.container.new_section{
   .splash.above_the_fold h1 {
     font-size: 54px;
     padding-top: 150px;
+  }
+
+  .main_headline{
+    margin-top:0px;
   }
 
   .new_section {
