--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -24,7 +24,7 @@
 
           <div class="row">
             <div class="col-md-4 col-sm-5" id="learn-more-button">
-              <a href="/sanfrancisco/" class="btn btn-default btn-lg call_to_action_button text-center">
+              <a href="#learn_more_section" class="btn btn-default btn-lg call_to_action_button text-center">
                 <span class="main-action-text">
                   {{ content.learn_more_button }}
                 </span>
@@ -57,7 +57,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-8 col-md-7">
-        <div class="gov_service new_section">
+        <div class="gov_service new_section" id="learn_more_section" name="learn_more_section">
           <h2 class="gov_service_name">
             {{ linkify(content.gov_service_name) }}
           </h2>
