Added contact info, switched time expectation

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -103,6 +103,17 @@ p.step_headline{
   padding-bottom: 40px;
 }
 
+span.glyphicon{
+  padding-right:10px;
+}
+
+.time_expectation h2{
+  text-align: center;
+  max-width: none;
+  color:#004A6C;
+  margin-bottom:40px;
+}
+
 
 
 
@@ -209,10 +220,6 @@ section.footer.container.new_section{
 }
 
 @media (min-width: @screen-sm-min) {
-  h2.time_expectation {
-    padding-top: 94px;
-    padding-left: 28px;
-  }
 
   .splash.above_the_fold h1 {
     font-size: 54px;
