--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -69,7 +69,6 @@
     </div>
 
     <div class="row">
-
       <div class="col-xs-12 col-sm-6 col-md-5">
         <div class="journey_steps new_section">
           <h2 class="journey_headline">{{ content.journey_headline }}</h2>
@@ -85,8 +84,20 @@
         </div>
       </div>
 
-      <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
-        <h2 class="time_expectation">{{ content.time_expectation }}</h2>
+      <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-2">
+        <div class="contact_info new_section">
+          <h2>{{ content.contact_headline }}</h2>
+          <p><span class="glyphicon glyphicon-envelope"></span>{{ content.contact_email }}</p>
+          <p><span class="glyphicon glyphicon-earphone"></span>{{ content.contact_phone}}</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="time_expectation">
+          <h2>{{ content.time_expectation }}</h2>
+        </div>
       </div>
     </div>
 
