Spacing for time expectation

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -99,9 +99,6 @@ p.step_headline{
   list-style-type: circle;
 }
 
-.journey_steps{
-  padding-bottom: 40px;
-}
 
 span.glyphicon{
   padding-right:10px;
@@ -112,6 +109,7 @@ span.glyphicon{
   max-width: none;
   color:#004A6C;
   margin-bottom:40px;
+  padding-top: 40px;
 }
 
 
