--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -7,6 +7,10 @@ h1 { font-size: 40px; font-weight: 700; }
 h1.main_headline { margin-bottom: 4px; }
 section.content > .container:first-child { padding-top: 2em; }
 
+.header-contact-info{
+
+}
+
 h2 {
   font-size: 26px;
   margin-bottom: 20px;
@@ -126,12 +130,21 @@ span.glyphicon{
   color: @brand-note;
 }
 
+.footer_info{
+  margin-top:20px;
+}
+
 .cfa-logo {
   width: 12em;
   opacity: 0.3;
 }
 .footer_logo {
   padding: 3em 0 5em 0;
+  margin-top:30px;
+}
+
+.footer_logo p{
+  color:grey;
 }
 
 .btn-lg{
@@ -152,7 +165,7 @@ span.glyphicon{
 .apply_backup,
 .backup_apply_headline,
 .footer_logo,
-.footer p {
+{
   text-align: center;
 }
 
