Added clean slate to resources in footer

--- a/typeseam/templates/includes/footer.html
+++ b/typeseam/templates/includes/footer.html
@@ -13,7 +13,8 @@
       <div class="col-sm-4 footer_info">
         <p><b>Resources:</b></p>
         <p class="footer_legal"><span class="glyphicon glyphicon-circle-arrow-right"></span>{{ linkify(content.footer_legal) }}</p>
-        <p class="footer_website_description"><span class="glyphicon glyphicon-circle-arrow-right"></span> {{ linkify(content.footer_website_description) }}</p>
+        <p class="footer_website_description"><span class="glyphicon glyphicon-circle-arrow-right"></span>{{ linkify(content.footer_website_description) }}</p>
+        <p class="footer_legal"><span class="glyphicon glyphicon-circle-arrow-right"></span>{{ linkify(content.footer_cleanslate) }}</p>
       </div>
     </div>
 
