Commented out phone number until Twilio is fixed

--- a/typeseam/templates/includes/footer.html
+++ b/typeseam/templates/includes/footer.html
@@ -4,7 +4,7 @@
       <div class="col-sm-4 footer_info">
         <p><b>Contact info:</b></p>
         <p><span class="glyphicon glyphicon-envelope"></span>{{ content.contact_email }}</p>
-        <p><span class="glyphicon glyphicon-earphone"></span>{{ content.contact_phone}}</p>
+        <!-- <p><span class="glyphicon glyphicon-earphone"></span>{{ content.contact_phone}}</p> -->
       </div>
 
       <div class="col-sm-4">
