--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -88,7 +88,7 @@
         <div class="contact_info new_section">
           <h2>{{ content.contact_headline }}</h2>
           <p><span class="glyphicon glyphicon-envelope"></span>{{ content.contact_email }}</p>
-          <p><span class="glyphicon glyphicon-earphone"></span>{{ content.contact_phone}}</p>
+          <!--  <p><span class="glyphicon glyphicon-earphone"></span>{{ content.contact_phone}}</p> -->
         </div>
       </div>
     </div>
