small html fixes

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -173,9 +173,13 @@ span.glyphicon{
   float: none;
   margin: 0 auto;
 }
+.splash ul {
+  padding: 0;
+  font-size: 18px;
+  line-height: 1.8em;
+}
 
 ul.opportunities {
-  padding: 0;
   padding-top: 12px;
   text-align: left;
 }
