--- a/typeseam/templates/includes/footer.html
+++ b/typeseam/templates/includes/footer.html
@@ -2,19 +2,31 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-4 footer_info">
-        <p><b>Contact info:</b></p>
-        <p><span class="glyphicon glyphicon-envelope"></span>{{ content.contact_email }}</p>
-        <!-- <p><span class="glyphicon glyphicon-earphone"></span>{{ content.contact_phone}}</p> -->
+        <h4>Contact info:</h4>
+        <ul>
+          <li>Email: {{ linkify(content.contact_email) }}</li>
+          <li>Phone: {{ linkify(content.contact_phone) }}</li>
+        </ul>
       </div>
 
       <div class="col-sm-4">
       </div>
 
       <div class="col-sm-4 footer_info">
-        <p><b>Resources:</b></p>
-        <p class="footer_legal"><span class="glyphicon glyphicon-circle-arrow-right"></span>{{ linkify(content.footer_legal) }}</p>
-        <p class="footer_website_description"><span class="glyphicon glyphicon-circle-arrow-right"></span>{{ linkify(content.footer_website_description) }}</p>
-        <p class="footer_legal"><span class="glyphicon glyphicon-circle-arrow-right"></span>{{ linkify(content.footer_cleanslate) }}</p>
+        <h4>
+          Resources:
+        </h4>
+        <ul>
+          <li>
+            <span class="glyphicon glyphicon-circle-arrow-right"></span>{{ linkify(content.footer_legal) }}
+          </li>
+          <li>
+            <span class="glyphicon glyphicon-circle-arrow-right"></span>{{ linkify(content.footer_website_description) }}
+          </li>
+          <li>
+            <span class="glyphicon glyphicon-circle-arrow-right"></span>{{ linkify(content.footer_cleanslate) }}
+          </li>
+        </ul>
       </div>
     </div>
 
