fixing css, html in privacy and footer pages

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -173,7 +173,7 @@ span.glyphicon{
   float: none;
   margin: 0 auto;
 }
-.splash ul {
+.splash ul, .footer ul {
   padding: 0;
   font-size: 18px;
   line-height: 1.8em;
@@ -272,7 +272,7 @@ section.footer.container.new_section{
   }
 }
 
-.privacy_policy ul {
+.privacy ul {
   list-style-type: disc;
 }
 
