--- a/typeseam/templates/privacy_policy.html
+++ b/typeseam/templates/privacy_policy.html
@@ -68,7 +68,7 @@
           <p>Protecting your personal information is extremely important to us and we take all reasonable measures to do so. Here are some specific security practices we use:</p>
           <ul>
             <li>When you enter your information on our site we encrypt the transmission of that information using transport layer security (TLS).</li>
-            <li>We store your personal information on Typeform and Heroku, which are trusted third party services designed for holding sensitive information</li>
+            <li>We store your personal information on Heroku, which is a trusted third party service designed for holding sensitive information.</li>
             <li>Although we try our best to protect the privacy of your personal information, we cannot guarantee complete security. The transmission of information via the Internet is not completely secure. Unauthorized entry or use, hardware or software failure, and other factors, may compromise the security of user information at any time.</li>
           </ul>
 
@@ -79,13 +79,20 @@
           <p>This version of the policy is effective March 18, 2016.</p>
 
           <h2>Questions</h2>
-          <p>If you have any questions, comments, concerns, or complaints with the Site, please contact us by email at <a href="mailto:clearmyrecord@codeforamerica.org">clearmyrecord@codeforamerica.org</a>, by phone at <a href="tel:14153016005">(415) 301-6005</a>, or by mail at:<br>
+          <p>If you have any questions, comments, concerns, or complaints with the Site, please contact us.</p>
+          <ul>
+            <li>Email: {{ linkify(content.contact_email) }}</li>
+            <li>Phone: {{ linkify(content.contact_phone) }}</li>
+            <li>Mail:
+              <address>
+              Clear My Record<br>
+              155 9th Street<br>
+              San Francisco, CA 94103</p>
+              </address>
+            </li>
+          </ul>
 
-          <address>
-          Clear My Record<br>
-          155 9th Street<br>
-          San Francisco, CA 94103</p>
-          </address>
+          
 
           <p>We will do our best to resolve the issue.</p>
       </div>
