--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -2,7 +2,7 @@
 
 header { padding: .5em 0;}
 .top_bar a { color: inherit; text-decoration: none; }
-p { font-size: 18px; font-weight: 400; }
+p, ul { font-size: 18px; font-weight: 400; }
 h1 { font-size: 40px; font-weight: 700; }
 h1.main_headline { margin-bottom: 4px; }
 section.content > .container:first-child { padding-top: 2em; }
@@ -175,7 +175,6 @@ span.glyphicon{
 }
 .splash ul, .footer ul {
   padding: 0;
-  font-size: 18px;
   line-height: 1.8em;
 }
 
