fix parole probation field

--- a/typeseam/templates/forms/sanfrancisco.html
+++ b/typeseam/templates/forms/sanfrancisco.html
@@ -249,13 +249,13 @@
 	  <ul class="radio_options options_list">
       <li>
 	      <label class="field-option_label">
-	        <input type="radio" name="us_citizen" value="yes">
+	        <input type="radio" name="on_probation_parole" value="yes">
 	        Yes
         </label>
       </li>
       <li>
 	      <label class="field-option_label">
-	        <input type="radio" name="us_citizen" value="no">
+	        <input type="radio" name="on_probation_parole" value="no">
 	        No
         </label>
       </li>
