--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -1,15 +1,12 @@
 
 
-header { padding: .5em 0;}
+header { padding: 1em 0;}
 .top_bar a { color: inherit; text-decoration: none; }
 p, ul { font-size: 18px; font-weight: 400; }
 h1 { font-size: 40px; font-weight: 700; }
 h1.main_headline { margin-bottom: 4px; }
 section.content > .container:first-child { padding-top: 2em; }
 
-.header-contact-info{
-
-}
 
 h2 {
   font-size: 26px;
@@ -35,7 +32,7 @@ p.step_headline{
 }
 
 .main_headline{
-  margin-top:70px;
+  margin-top: 1em;
 }
 
 .call_to_action_button {
@@ -50,7 +47,7 @@ p.step_headline{
 }
 
 .credibility_note {
-  padding-top: 100px;
+  padding-top: 2em;
   padding-bottom: 20px;
 }
 .credibility_note a {
@@ -237,7 +234,7 @@ section.footer.container.new_section{
 
   .splash.above_the_fold h1 {
     font-size: 54px;
-    padding-top: 150px;
+    padding-top: 1.75em;
   }
 
   .main_headline{
@@ -245,7 +242,7 @@ section.footer.container.new_section{
   }
 
   .new_section {
-    padding-top:40px;
+    padding-top: 40px;
   }
 
   .journey_headline, h3.time_expectation {
@@ -258,7 +255,6 @@ section.footer.container.new_section{
   }
 
   .splash.above_the_fold {
-    background-image: url("/static/img/CMR-hero.png");
     background-size: cover;
     min-height: 30em;
   }
@@ -266,6 +262,8 @@ section.footer.container.new_section{
 }
 
 @media (min-width: @screen-md-min) {
+
+  header { padding: 1.5em 0;}
   .splash.above_the_fold {
     min-height: 40em;
   }
