Switching around content

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -105,6 +105,10 @@ span.glyphicon{
   padding-right:10px;
 }
 
+.secondary_headline2{
+  color:#004A6C;
+}
+
 .time_expectation h2{
   text-align: center;
   max-width: none;
@@ -113,6 +117,17 @@ span.glyphicon{
   padding-top: 40px;
 }
 
+
+.number_bubble{
+  height:50px;
+  width:50px;
+  background-color: #069ED6;
+  color: #fff;
+  border-radius: 200px;
+  text-align: center;
+  padding-top: 24px;
+  font-weight: bold;
+}
 
 
 
