--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -56,43 +56,41 @@
 <section class="about_the_service">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-sm-8 col-md-7">
-        <div class="gov_service new_section" id="learn_more_section" name="learn_more_section">
-          <h2 class="gov_service_name">
-            {{ linkify(content.gov_service_name) }}
-          </h2>
-          <p class="gov_service_description">
-            {{ content.gov_service_description }}
-          </p>
-        </div>
+      <div class="col-md-12">
+        <h2 class="benefits_healine new_section">{{ content.benefits_headline }}</h2>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-5">
-        <div class="journey_steps new_section">
-          <h2 class="journey_headline">{{ content.journey_headline }}</h2>
-          <div class="step">
-            <p class="step_paragraph"> <strong>{{ content.step_1_headline }}</strong> {{ content.step_1_paragraph }}</p>
-          </div>
-          <div class="step">
-            <p class="step_paragraph"> <strong>{{ content.step_2_headline }}</strong> {{ content.step_2_paragraph }}</p>
-          </div>
-          <div class="step">
-            <p class="step_paragraph"> <strong>{{ content.step_3_headline }}</strong> {{ content.step_3_paragraph }}</p>
-          </div>
-        </div>
+      <div class="col-xs-12 col-md-4">
+        <h2 class="secondary_headline2">{{ content.step_1_headline }}</h2>
+        <p class="step_paragraph">{{ content.step_1_paragraph }}</p>
       </div>
 
-      <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-2">
-        <div class="contact_info new_section">
-          <h2>{{ content.contact_headline }}</h2>
-          <ul>
-            <li>Email: {{ linkify(content.contact_email) }}</li>
-            <li>Phone: {{ linkify(content.contact_phone) }}</li>
-          </ul>
-        </div>
+      <div class="col-xs-12 col-md-4">
+        <h2 class="secondary_headline2">{{ content.step_2_headline }}</h2>
+        <p class="step_paragraph">{{ content.step_2_paragraph }}</p>
       </div>
+
+      <div class="col-xs-12 col-md-4">
+        <h2 class="secondary_headline2">{{ content.step_3_headline }}</h2>
+        <p class="step_paragraph">{{ content.step_3_paragraph }}</p>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col-md-12">
+        <h2 class="benefits_healine new_section">{{ content.eligibilty_headline }}</h2>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-8">
+        <h4><strong>You might be eligible</strong></h4>
+      </div>
+      <div class="col-xs-12 col-md-4"></div>
+        <h4><strong>You are not eligible</strong></h4>
     </div>
 
     <div class="row">
@@ -121,6 +119,29 @@
           <li class="opportunity">{{ content.opportunity_2 }}</li>
           <li class="opportunity">{{ content.opportunity_3 }}</li>
         </ul>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="gov_service new_section" id="learn_more_section" name="learn_more_section">
+        <h2 class="gov_service_name">
+          {{ linkify(content.gov_service_name) }}
+        </h2>
+        <p class="gov_service_description">
+          {{ content.gov_service_description }}
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-2">
+        <div class="contact_info new_section">
+          <h2>{{ content.contact_headline }}</h2>
+          <ul>
+            <li>Email: {{ linkify(content.contact_email) }}</li>
+            <li>Phone: {{ linkify(content.contact_phone) }}</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
