--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -23,6 +23,10 @@ h2.time_expectation{
   color: @brand-note;
 }
 
+h4{
+  font-weight: 700;
+}
+
 p.step_headline{
   font-weight: 600;
 }
@@ -118,15 +122,16 @@ span.glyphicon{
 }
 
 
-.number_bubble{
-  height:50px;
-  width:50px;
-  background-color: #069ED6;
+.cfa-staff{
+  height:100px;
+  width:100px;
+  background-color: #fff;
   color: #fff;
   border-radius: 200px;
   text-align: center;
   padding-top: 24px;
   font-weight: bold;
+  margin-bottom:25px;
 }
 
 
@@ -172,9 +177,7 @@ span.glyphicon{
 }
 
 
-.gov_service_name,
-.gov_service_description,
-.apply_backup,
+
 .backup_apply_headline,
 .footer_logo,
 {
