--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -63,17 +63,17 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-4">
-        <h2 class="secondary_headline2">{{ content.step_1_headline }}</h2>
+        <h4>{{ content.step_1_headline }}</h4>
         <p class="step_paragraph">{{ content.step_1_paragraph }}</p>
       </div>
 
       <div class="col-xs-12 col-md-4">
-        <h2 class="secondary_headline2">{{ content.step_2_headline }}</h2>
+        <h4>{{ content.step_2_headline }}</h4>
         <p class="step_paragraph">{{ content.step_2_paragraph }}</p>
       </div>
 
       <div class="col-xs-12 col-md-4">
-        <h2 class="secondary_headline2">{{ content.step_3_headline }}</h2>
+        <h4>{{ content.step_3_headline }}</h4>
         <p class="step_paragraph">{{ content.step_3_paragraph }}</p>
       </div>
     </div>
@@ -87,16 +87,53 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-8">
-        <h4><strong>You might be eligible</strong></h4>
+        <h4>You might qualify</h4>
+        <div class="col-xs-12 col-sm-6">
+          <ul>
+            <li>Drug possession</li>
+            <li>Petty theft under $950</li>
+            <li>Shoplifting under $950</li>
+            <li>Forgery under $950</li>
+            <li>Receipt of stolen property under $950</li>
+            <li>Writing a bad check under $950</li>
+            <li>Drunk driving</li>
+          <ul>
+        </div>
+
+        <div class="col-xs-12 col-sm-6">
+          <ul>
+            <li>Theft</li>
+            <li>Prostitution</li>
+            <li>Burglary</li>
+            <li>Drug offenses</li>
+            <li>Assault and battery</li>
+            <li>Robbery</li>
+            <li>Domestic violence</li>
+          <ul>
+        </div>
       </div>
       <div class="col-xs-12 col-md-4"></div>
-        <h4><strong>You are not eligible</strong></h4>
+        <h4>You do not qualify</h4>
+        <ul>
+          <li>Currently serving a sentence</li>
+          <li>Currently being charged with a crime</li>
+          <li>Currently on probation</li>
+          <li>Convicted for rape or child molestation</li>
+          <li>Convicted of murder</li>
+          <li>On the sex offender registry</li>
+          <li>Convicted of any superstrikes</li>
+        <ul>
     </div>
 
     <div class="row">
       <div class="col-xs-12">
         <div class="time_expectation">
-          <h2>{{ content.time_expectation }}</h2>
+          <h2>{{ content.backup_apply_headline }}</h2>
+          <a href="/sanfrancisco/" class="btn btn-primary btn-lg call_to_action_button text-center">
+            <span class="main-action-text">
+              {{ content.call_to_action_button }}
+            </span>
+          </a>
         </div>
       </div>
     </div>
@@ -107,34 +144,16 @@
 <section class="apply_backup new_section">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
-        <h2 class="backup_apply_headline">{{ content.backup_apply_headline }}</h2>
-        <a href="/sanfrancisco/" class="btn btn-primary btn-lg call_to_action_button text-center">
-          <span class="main-action-text">
-            {{ content.call_to_action_button }}
-          </span>
-        </a>
-        <ul class="opportunities">
-          <li class="opportunity">{{ content.opportunity_1 }}</li>
-          <li class="opportunity">{{ content.opportunity_2 }}</li>
-          <li class="opportunity">{{ content.opportunity_3 }}</li>
-        </ul>
-      </div>
-    </div>
+      <div class="col-xs-12 col-md-6">
+        <div class="gov_service new_section" id="learn_more_section" name="learn_more_section">
+          <h2 class="gov_service_name">
+            {{ content.gov_service_name }}
+          </h2>
+          <p class="gov_service_description">
+            {{ content.gov_service_description }}
+          </p>
+        </div>
 
-    <div class="row">
-      <div class="gov_service new_section" id="learn_more_section" name="learn_more_section">
-        <h2 class="gov_service_name">
-          {{ linkify(content.gov_service_name) }}
-        </h2>
-        <p class="gov_service_description">
-          {{ content.gov_service_description }}
-        </p>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-2">
         <div class="contact_info new_section">
           <h2>{{ content.contact_headline }}</h2>
           <ul>
@@ -143,7 +162,48 @@
           </ul>
         </div>
       </div>
+
+      <div class="col-xs-12 col-md-5 col-md-offset-1">
+        <div class="new_section">
+          <h2>We will be helping you apply</h2>
+          <div class="row">
+            <div class="col-xs-3">
+              <div class="cfa-staff" id="jazmyn-circle"></div>
+            </div>
+
+            <div class="col-xs-9">
+              <h4>Jazmyn Latimer</h4>
+              <p>Code for America</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-3">
+              <div class="cfa-staff" id="ben-circle"></div>
+            </div>
+
+            <div class="col-xs-9">
+              <h4>Ben Golder</h4>
+              <p>Code for America</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-3">
+              <div class="cfa-staff" id="tiffany-circle"></div>
+            </div>
+
+            <div class="col-xs-9">
+              <h4>Tiffany Andrews</h4>
+              <p>Code for America</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
     </div>
+
   </div>
 </section>
 
