--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -86,7 +86,14 @@ p.step_headline{
   }
 }
 
-.apply_backup {
+
+.eligibility_list li{
+  list-style: disc;
+  margin-left: 10px;
+  padding-bottom: 5px;
+}
+
+.who_we_are {
   background-color: @brand-note;
   color: #fff;
 }
