--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -55,81 +55,96 @@
 
 <section class="about_the_service">
   <div class="container">
+
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-xs-12">
         <h2 class="benefits_healine new_section">{{ content.benefits_headline }}</h2>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-xs-12 col-md-4">
-        <h4>{{ content.step_1_headline }}</h4>
-        <p class="step_paragraph">{{ content.step_1_paragraph }}</p>
-      </div>
-
-      <div class="col-xs-12 col-md-4">
-        <h4>{{ content.step_2_headline }}</h4>
-        <p class="step_paragraph">{{ content.step_2_paragraph }}</p>
-      </div>
-
-      <div class="col-xs-12 col-md-4">
-        <h4>{{ content.step_3_headline }}</h4>
-        <p class="step_paragraph">{{ content.step_3_paragraph }}</p>
-      </div>
-    </div>
-
-
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="benefits_healine new_section">{{ content.eligibilty_headline }}</h2>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-xs-12 col-md-8">
-        <h4>You might qualify</h4>
-        <div class="col-xs-12 col-sm-6">
-          <ul>
-            <li>Drug possession</li>
-            <li>Petty theft under $950</li>
-            <li>Shoplifting under $950</li>
-            <li>Forgery under $950</li>
-            <li>Receipt of stolen property under $950</li>
-            <li>Writing a bad check under $950</li>
-            <li>Drunk driving</li>
-          <ul>
+      <div class="apply_steps">
+        <div class="col-xs-12 col-md-4">
+          <h4 class="step_headline">{{ content.step_1_headline }}</h4>
+          <p class="step_paragraph">{{ content.step_1_paragraph }}</p>
         </div>
 
-        <div class="col-xs-12 col-sm-6">
-          <ul>
-            <li>Theft</li>
-            <li>Prostitution</li>
-            <li>Burglary</li>
-            <li>Drug offenses</li>
-            <li>Assault and battery</li>
-            <li>Robbery</li>
-            <li>Domestic violence</li>
-          <ul>
+        <div class="col-xs-12 col-md-4">
+          <h4 class="step_headline">{{ content.step_2_headline }}</h4>
+          <p class="step_paragraph">{{ content.step_2_paragraph }}</p>
+        </div>
+
+        <div class="col-xs-12 col-md-4">
+          <h4 class="step_headline">{{ content.step_3_headline }}</h4>
+          <p class="step_paragraph">{{ content.step_3_paragraph }}</p>
         </div>
       </div>
-      <div class="col-xs-12 col-md-4"></div>
-        <h4>You do not qualify</h4>
-        <ul>
-          <li>Currently serving a sentence</li>
-          <li>Currently being charged with a crime</li>
-          <li>Currently on probation</li>
-          <li>Convicted for rape or child molestation</li>
-          <li>Convicted of murder</li>
-          <li>On the sex offender registry</li>
-          <li>Convicted of any superstrikes</li>
-        <ul>
     </div>
+
 
     <div class="row">
       <div class="col-xs-12">
-        <div class="time_expectation">
+        <h2 class="eligibility_healine new_section">{{ content.eligibilty_headline }}</h2>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="eligibility_info">
+
+        <div class="yes_qualify">
+          <div class="col-xs-12 col-md-8">
+            <h4 class="eligibility-list-header">You might qualify</h4>
+            <div class="col-xs-12 col-sm-6">
+              <ul class="eligibility_list">
+                <li>Drug possession</li>
+                <li>Petty theft under $950</li>
+                <li>Shoplifting under $950</li>
+                <li>Forgery under $950</li>
+                <li>Receipt of stolen property under $950</li>
+                <li>Writing a bad check under $950</li>
+                <li>Drunk driving</li>
+              </ul>
+            </div>
+
+            <div class="col-xs-12 col-sm-6">
+              <ul class="eligibility_list">
+                <li>Theft</li>
+                <li>Prostitution</li>
+                <li>Burglary</li>
+                <li>Drug offenses</li>
+                <li>Assault and battery</li>
+                <li>Robbery</li>
+                <li>Domestic violence</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="no-qualify">
+          <div class="col-xs-12 col-md-4">
+            <h4 class="eligibility-list-header">You do not qualify</h4>
+            <div class="col-xs-12 col-sm-12">
+              <ul class="eligibility_list">
+                <li>Currently serving a sentence</li>
+                <li>Currently being charged with a crime</li>
+                <li>Currently on probation</li>
+                <li>Convicted for rape or child molestation</li>
+                <li>Convicted of murder</li>
+                <li>On the sex offender registry</li>
+                <li>Convicted of any superstrikes</li>
+              </ul>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="apply_backup new_section">
+        <div class="col-xs-12">
           <h2>{{ content.backup_apply_headline }}</h2>
-          <a href="/sanfrancisco/" class="btn btn-primary btn-lg call_to_action_button text-center">
+          <a href="/sanfrancisco/" class="btn btn-primary btn-lg call_to_action_button">
             <span class="main-action-text">
               {{ content.call_to_action_button }}
             </span>
@@ -141,11 +156,13 @@
   </div>
 </section>
 
-<section class="apply_backup new_section">
+
+<section class="who_we_are new_section">
   <div class="container">
+
     <div class="row">
       <div class="col-xs-12 col-md-6">
-        <div class="gov_service new_section" id="learn_more_section" name="learn_more_section">
+        <div class="gov_service" id="learn_more_section" name="learn_more_section">
           <h2 class="gov_service_name">
             {{ content.gov_service_name }}
           </h2>
@@ -164,38 +181,45 @@
       </div>
 
       <div class="col-xs-12 col-md-5 col-md-offset-1">
-        <div class="new_section">
+        <div class="team_faces">
+
           <h2>We will be helping you apply</h2>
-          <div class="row">
-            <div class="col-xs-3">
-              <div class="cfa-staff" id="jazmyn-circle"></div>
-            </div>
+          <div class="team_face_row">
+            <div class="row">
+              <div class="col-xs-3">
+                <div class="cfa-staff" id="jazmyn-circle"></div>
+              </div>
 
-            <div class="col-xs-9">
-              <h4>Jazmyn Latimer</h4>
-              <p>Code for America</p>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-xs-3">
-              <div class="cfa-staff" id="ben-circle"></div>
-            </div>
-
-            <div class="col-xs-9">
-              <h4>Ben Golder</h4>
-              <p>Code for America</p>
+              <div class="col-xs-9">
+                <h4>Jazmyn Latimer</h4>
+                <p>Code for America</p>
+              </div>
             </div>
           </div>
 
-          <div class="row">
-            <div class="col-xs-3">
-              <div class="cfa-staff" id="tiffany-circle"></div>
-            </div>
+          <div class="team_face_row">
+            <div class="row">
+              <div class="col-xs-3">
+                <div class="cfa-staff" id="ben-circle"></div>
+              </div>
 
-            <div class="col-xs-9">
-              <h4>Tiffany Andrews</h4>
-              <p>Code for America</p>
+              <div class="col-xs-9">
+                <h4>Ben Golder</h4>
+                <p>Code for America</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="team_face_row">
+            <div class="row">
+              <div class="col-xs-3">
+                <div class="cfa-staff" id="tiffany-circle"></div>
+              </div>
+
+              <div class="col-xs-9">
+                <h4>Tiffany Andrews</h4>
+                <p>Code for America</p>
+              </div>
             </div>
           </div>
 
