Styling eligibility content

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -8,6 +8,7 @@ h1.main_headline { margin-bottom: 4px; }
 section.content > .container:first-child { padding-top: 2em; }
 
 
+
 h2 {
   font-size: 26px;
   margin-bottom: 20px;
@@ -86,6 +87,11 @@ p.step_headline{
   }
 }
 
+.about_the_service h2{
+  color: @splash-background;
+  line-height: 1.5;
+}
+
 
 .eligibility_list li{
   list-style: disc;
@@ -93,9 +99,17 @@ p.step_headline{
   padding-bottom: 5px;
 }
 
+.about_the_service, .who_we_are{
+  padding-bottom:50px;
+}
+
 .who_we_are {
   background-color: @brand-note;
   color: #fff;
+}
+
+.who_we_are h2{
+  line-height: 1.5;
 }
 
 .privacy_description{
