--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -93,7 +93,10 @@
 
         <div class="yes_qualify">
           <div class="col-xs-12 col-md-8">
-            <h4 class="eligibility-list-header">You might qualify</h4>
+            <h4 class="eligibility-list-header">
+              <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+              You might qualify
+            </h4>
             <div class="col-xs-12 col-sm-6">
               <ul class="eligibility_list">
                 <li>Drug possession</li>
@@ -123,7 +126,10 @@
 
         <div class="no-qualify">
           <div class="col-xs-12 col-md-4">
-            <h4 class="eligibility-list-header">You do not qualify</h4>
+            <h4 class="eligibility-list-header">
+              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+              You do not qualify
+            </h4>
             <div class="col-xs-12 col-sm-12">
               <ul class="eligibility_list">
                 <li>Currently serving a sentence</li>
@@ -141,9 +147,9 @@
     </div>
 
     <div class="row">
-      <div class="apply_backup new_section">
+      <div class="apply_backup">
         <div class="col-xs-12">
-          <h2>{{ content.backup_apply_headline }}</h2>
+          <h2 class="backup_apply_headline new_section">{{ content.backup_apply_headline }}</h2>
           <a href="/sanfrancisco/" class="btn btn-primary btn-lg call_to_action_button">
             <span class="main-action-text">
               {{ content.call_to_action_button }}
