--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -92,6 +92,38 @@ p.step_headline{
   line-height: 1.5;
 }
 
+.apply_steps{
+  margin-top: 20px;
+}
+
+.step_headline{
+  color:@splash-background;
+}
+
+.step{
+  background-color: @brand-note;
+  color: #fff;
+  height:100%;
+  max-height:300px;
+  padding:12px;
+  border-radius: 4px;
+}
+
+.step-arrow{
+  color: @splash-background;
+  text-align: center;
+}
+.eligibility_headline{
+  margin-top:70px;
+}
+
+
+.eligibility-list-header{
+  border: 2px solid #069ED6;
+  padding:10px;
+  border-radius: 4px;
+  color:#069ED6
+}
 
 .eligibility_list li{
   list-style: disc;
@@ -134,13 +166,6 @@ span.glyphicon{
   color:#004A6C;
 }
 
-.time_expectation h2{
-  text-align: center;
-  max-width: none;
-  color:#004A6C;
-  margin-bottom:40px;
-  padding-top: 40px;
-}
 
 
 .cfa-staff{
