--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -144,6 +144,10 @@ p.step_headline{
   line-height: 1.5;
 }
 
+.who_we_are a{
+  color: @splash-background;
+}
+
 .privacy_description{
   padding-top:40px;
   padding-bottom:40px;
