Team photos added

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -148,6 +148,38 @@ p.step_headline{
   color: @splash-background;
 }
 
+.team_faces h4{
+  margin-bottom: 5px;
+}
+
+.cfa-staff{
+  height:100px;
+  width:100px;
+  background-color: #fff;
+  color: #fff;
+  border-radius: 200px;
+  text-align: center;
+  padding-top: 24px;
+  font-weight: bold;
+  margin-bottom:25px;
+  border:1px solid #fff;
+}
+
+#jazmyn-circle{
+  background: url('../img/jazmyn-latimer.jpg');
+  background-size: 100%;
+}
+
+#ben-circle{
+  background: url('../img/ben-golder.jpg');
+  background-size: 100%;
+}
+
+#tiffany-circle{
+  background: url('../img/tiffany-andrews.jpg');
+  background-size: 100%;
+}
+
 .privacy_description{
   padding-top:40px;
   padding-bottom:40px;
@@ -172,17 +204,7 @@ span.glyphicon{
 
 
 
-.cfa-staff{
-  height:100px;
-  width:100px;
-  background-color: #fff;
-  color: #fff;
-  border-radius: 200px;
-  text-align: center;
-  padding-top: 24px;
-  font-weight: bold;
-  margin-bottom:25px;
-}
+
 
 
 
