--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -217,11 +217,11 @@
           <h2>We will be helping you apply</h2>
           <div class="team_face_row">
             <div class="row">
-              <div class="col-xs-3">
+              <div class="col-xs-4 col-sm-3">
                 <div class="cfa-staff" id="jazmyn-circle"></div>
               </div>
 
-              <div class="col-xs-9">
+              <div class="col-xs-8 col-sm-9">
                 <h4>Jazmyn Latimer</h4>
                 <p>Code for America</p>
               </div>
@@ -230,11 +230,11 @@
 
           <div class="team_face_row">
             <div class="row">
-              <div class="col-xs-3">
+              <div class="col-xs-4 col-sm-3">
                 <div class="cfa-staff" id="ben-circle"></div>
               </div>
 
-              <div class="col-xs-9">
+              <div class="col-xs-8 col-sm-9">
                 <h4>Ben Golder</h4>
                 <p>Code for America</p>
               </div>
@@ -243,11 +243,11 @@
 
           <div class="team_face_row">
             <div class="row">
-              <div class="col-xs-3">
+              <div class="col-xs-4 col-sm-3">
                 <div class="cfa-staff" id="tiffany-circle"></div>
               </div>
 
-              <div class="col-xs-9">
+              <div class="col-xs-8 col-sm-9">
                 <h4>Tiffany Andrews</h4>
                 <p>Code for America</p>
               </div>
