time expectation centered

--- a/frontend/less/custom.less
+++ b/frontend/less/custom.less
@@ -21,7 +21,7 @@ h3.subheadline { margin-top:0; margin-bottom:40px; }
 h2.time_expectation{
   font-weight: 700;
   text-align: center;
-  color: @brand-note;
+  color: @splash-background;
 }
 
 h4{
@@ -250,7 +250,7 @@ span.glyphicon{
 
 
 
-.backup_apply_headline,
+.apply_backup_2, .backup_apply_headline,
 .footer_logo,
 {
   text-align: center;
@@ -335,11 +335,8 @@ section.footer.container.new_section{
     padding-top: 40px;
   }
 
-  .journey_headline, h3.time_expectation {
-    text-align: left;
-  }
 
-  .opportunity, section.footer.container.new_section {
+  .apply_backup_2, .opportunity, section.footer.container.new_section {
     text-align: center;
     padding-bottom: 10px;
   }
