--- a/typeseam/templates/main_splash.html
+++ b/typeseam/templates/main_splash.html
@@ -256,7 +256,19 @@
 
         </div>
       </div>
+    </div>
 
+    <div class="row">
+      <div class="apply_backup_2">
+        <div class="col-xs-12">
+          <h2 class="time_expectation new_section">{{ content.time_expectation}}</h2>
+          <a href="/sanfrancisco/" class="btn btn-primary btn-lg call_to_action_button">
+            <span class="main-action-text">
+              {{ content.call_to_action_button }}
+            </span>
+          </a>
+        </div>
+      </div>
     </div>
 
   </div>
